@@ -45,6 +45,7 @@ private:
   bool loadFont(const char *filename, FT_Face &face);
 
   SDL_Window *_window;
+  SDL_Surface *_surface;
 };
 
 #endif
