@@ -1,3 +1,6 @@
+2014-07-07
+	Update SDL to use SDL2 and common widget
+
 2014-06-14
 	Fix crash evaluating "a \\ b"
 	Fix INPUT command in FLTK for scrolled display
